--- a/index.html
+++ b/index.html
@@ -2,11 +2,10 @@
 <html>
     <head>
         <meta charset="utf-8" />
-        <link rel="stylesheet" href="style.css" />
         <title>Zozor - Carnets de voyage</title>
     </head>
     
     <body>
-  <h2>Zozor - Carnets de voyage</h2>
+  <h2>c'est mon premier site web</h2>
     </body>
 </html>
