--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Ma première page avec du style</title>
-  <link rel="stylesheet" href="Mystyle.css">
+  <link rel="stylesheet" href="MyStyle.css">
   
 </head>
 
